# athena-engine

./: CMakeLists.txt  README.md
diagram/: EngineDiagram.dia  EngineDiagram.dia.autosave
documentation/: Technical Report.docx  ~WRL0003.tmp
documentation/diagram/: EngineDiagram.dia~
documentation/html/: _audio_context_8cpp.html  _audio_context_8cpp__incl.map  _audio_context_8cpp__incl.md5  _audio_context_8h.html  _audio_context_8h.js  _audio_context_8h__dep__incl.map  _audio_context_8h__dep__incl.md5  _audio_context_8h__incl.map  _audio_context_8h__incl.md5  _audio_context_8h_source.html  _box_collider_8cpp.html  _box_collider_8cpp__incl.map  _box_collider_8cpp__incl.md5  _box_collider_8h.html  _box_collider_8h__dep__incl.map  _box_collider_8h__dep__incl.md5  _box_collider_8h__incl.map  _box_collider_8h__incl.md5  _box_collider_8h_source.html  _buffer_8cpp.html  _buffer_8cpp__incl.map  _buffer_8cpp__incl.md5  _buffer_8h.html  _buffer_8h__dep__incl.map  _buffer_8h__dep__incl.md5  _buffer_8h__incl.map  _buffer_8h__incl.md5  _buffer_8h_source.html  _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8h.html  _camera_8h.js  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _coin_8cpp.html  _coin_8cpp__incl.map  (+965 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+103 more)
doxygen/: Doxyfile
resources/objs/: BenchRock.mtl  Grass.mtl  Lake8.mtl  LakeScene.mtl  LightweightPark.mtl  Park2.mtl  Park3.mtl  Pond.mtl  Sailboat.mtl  Ship.mtl  SmallTree.mtl  Tree.mtl  TwoTrees.mtl  Water.mtl  WholePark.mtl  squarelake.mtl
resources/objs/final/: Coin.mtl  Grove.mtl  Lake.mtl  WaterPlane.mtl
resources/shaders/: New Text Document.txt  guiShader.txt  matShader.txt  waterShader.txt
src/game/: Coin.cpp  Coin.h  Player.cpp  Player.h  Score.cpp  Score.h  main.cpp
src/prometheus/: AudioContext.cpp  AudioContext.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Coin.cpp  Coin.h  Component.cpp  Component.h  Core.cpp  Core.h  Cubemap.cpp  Cubemap.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Gui.cpp  Gui.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Mouse.cpp  Mouse.h  NonCopyable.h  Player.cpp  Player.h  Resource.h  Resources.h  Screen.cpp  Screen.h  Sound.cpp  Sound.h  (+15 more)
src/rend/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/sandbox/: main.cpp
